fix(config): update config names for clarity